test_suite/alan-2022-examples/failing/006320_mutation.alan
source x_z begin leave 7 do or 5 end
